methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:9: error: not found: value testGauche
 testGauche = false
 ^SlugHunting:11: error: reassignment to val
 biscuit = estSurBiscuit()
         ^SlugHunting:15: error: reassignment to val
 bonChemin = isFacingTrail()
           ^SlugHunting:19: error: not found: value levebrosse
   levebrosse()
   ^SlugHunting:29: error: reassignment to val
 caseVerte = false
           ^SlugHunting:35: error: reassignment to val
     caseVerte = true
               ^